# whylogs

./: .buildinfo  .bumpversion.cfg  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .whylogs.yaml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  MANIFEST.in  Makefile  README.md  build.gradle.kts  build_proto.sh  codecov.yaml  constraints.json  customize_loggers.html  datasets.html  docker_test.sh  examples.html  genindex.html  getting_started.html  glossary.html  index.html  mkdocs.yml  mypy.ini  objects.inv  poetry.toml  publish.sh  py-modindex.html  pydoc-markdown.yaml  (+11 more)
java/spark/python/: Makefile  pyproject.toml
python/: .bumpversion.cfg  .flake8  .github  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  DESCRIPTION.md  Makefile  README.md  db.py  exploration.ipynb  mkdocs.yml  proto  pyproject.toml  setup.cfg  test.py
python/docs/: .gitignore  Makefile  conf.py  config.md  customize_loggers.md  datasets  datasets.rst  examples.md  examples.rst  getting_started.md  glossary.md  index.md  index.rst  whylogs.api.rst  whylogs.core.metrics.rst  whylogs.core.proto.rst  whylogs.core.proto.v0.rst  whylogs.core.rst  whylogs.core.utils.rst  whylogs.core.view.rst  whylogs.rst  whylogs.viewer.rst  whylogs.viewer.utils.rst  whylogs.viz.rst
python/docs/_static/: custom.css
python/docs/features/: config.md  data_validation.md  mergability.md  profiling.md  writing.md
python/docs/integrations/: fastapi.md  flask.md  index.md  mlflow.md  pyspark.md
python/docs/migration/: basics.md  configurations.md  format.md  log_rotation.md  overview.md
python/docs/support/: faqs.md  license.md  usage_statistics.rst
python/examples/: README.md  whylogs_101.ipynb
python/examples/advanced/: Condition_Count_Metrics.ipynb  Condition_Validators.ipynb  Constraints_Suite.ipynb  Custom_Metrics.ipynb  Drift_Algorithm_Configuration.ipynb  Image_Drift_Debugging.ipynb  Image_Logging.ipynb  Image_Logging_Udf_Metric.ipynb  Metric_Constraints.ipynb  Metric_Constraints_with_Condition_Count_Metrics.ipynb  README.md  Segmented_Performance.ipynb  Segmented_Performance_Data_Generation.ipynb  Segmented_Performance_Data_Generation_Classification_Regression_batches.ipynb  Segments.ipynb  Single_Image_Profile_Debug_Events.ipynb  Streaming_Data_with_Log_Rotation.ipynb  String_Tracking.ipynb  Transaction_Examples.ipynb  blood_cell_object_detection_image_profiling.ipynb  converting_v0_to_v1.ipynb
python/examples/basic/: Constraints_Suite.ipynb  Custom_Metrics.ipynb  Getting_Started.ipynb  Getting_Started_Metric_UDFs.ipynb  Getting_Started_with_UDFs.ipynb  Inspecting_Profiles.ipynb  Logging_Different_Data.ipynb  Merging_Profiles.ipynb  MetricConstraints.ipynb  Metric_Constraints.ipynb  Notebook_Profile_Visualizer.ipynb  README.md  Schema_Configuration.ipynb  SummaryConstraints.ipynb  debug_event_2.2023-08-31_14-28.json  debug_event_2.2023-08-31_16-50.json  debug_event_2.2023-08-31_16-56.json  viz_v2.py
python/examples/benchmarks/: KS_Profiling.ipynb  hellinger.ipynb
python/examples/datasets/: ecommerce.ipynb  employee.ipynb  weather.ipynb
python/examples/experimental/: Condition_Validator_UDF.ipynb  Logging_Text_with_UDFs.ipynb  Logging_with_Debug_Events.ipynb  Multi dataset logger.ipynb  NLP.ipynb  NLP_Summarization.ipynb  Process Logger.ipynb  Writing_Ranking_Performance_Metrics_to_WhyLabs.ipynb  custom_rank_metrics.ipynb  mnist_exploration.ipynb  nlp_example.py  performance_estimation.ipynb  whylogs_Audio_examples.ipynb  whylogs_UDF_examples.ipynb
python/examples/extensions/: Custom_Metrics.ipynb
python/examples/integrations/: BigQuery_Example.ipynb  Dask_Profiling.ipynb  Feature_Stores_and_whylogs.ipynb  Fugue_Profiling.ipynb  Guest Session.ipynb  Mlflow_Logging.ipynb  PySpark_Profiling.ipynb  Pyspark_Profiling.ipynb  Pyspark_Profiling_And_Distributed_Upload.ipynb  README.md  Writing_Profiles.ipynb  lure.ipynb  pyspark_profiling.ipynb  writing_profiles.ipynb
python/examples/segmented_perf/: data_splitting.ipynb  utils.py
python/examples/temp/: estimation.py  explore.ipynb  explore_ecommerce.ipynb  nlp_mc.ipynb  performance_estimation.ipynb  reservoir.ipynb
python/examples/tutorials/: Data_Validation_Tutorial.ipynb  Monitoring_Embeddings.ipynb  Pyspark_and_Constraints.ipynb  Training_Serve_Skew.ipynb  data_validation.ipynb
python/examples/whylogs_fundamentals/: Notebook_Profile_Visualizer.ipynb  README.md
python/highlight/: colors.py
python/mock_input/: moc_message.json
python/test_notebooks/: notebook_tests.py
python/tests/: conftest.py  smoketest.py  test_anthony.py  test_column_metrics.py  test_column_profile.py  test_dataset_profile.py  test_datatypes.py  test_extracted_columns.py  test_html_viewer.py  test_metrics.py  test_migration_converters.py  test_performance.py  test_proto_messages.py  test_version.py  test_whylogs.py
python/tests/api/: test_logger.py
python/tests/core/: test_datatypes.py  test_declarative_schema.py  test_model_performance_metrics.py  test_performance.py  test_preprocessing.py  test_resolver.py  test_schema.py
python/tests/datasets/: test_ecommerce.py  test_employee.py  test_weather.py
python/tests/drift/: test_column_drift_algorithm.py
python/tests/extras/: test_image_metric.py
python/tests/helpers/: utils.py
python/tests/migration/: test_migration_converters.py  test_uncompound.py
python/tests/viewer/: test_html_viewer.py
python/tests/viz/: test_profile_visualizer.py
python/whylogs/: __init__.py  foo.py  interop.py
python/whylogs/api/: __init__.py  annotations.py  logger.py  profiling_results.py  result_set.py
python/whylogs/context/: environ.py  version.py
python/whylogs/core/: __init__.py  column_profile.py  common.py  configs.py  constraint_relations.py  dataframe_wrapper.py  dataset_profile.py  datatypes.py  declarative_schema.py  errors.py  feature_weights.py  input_resolver.py  metadata.py  metric_getters.py  predicate_parser.py  schema.py  (+9 more)
python/whylogs_v1/: __init__.py
(+2061 files in other folders)
