# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = whylogs
version = 0.4.4-dev1
description = Profile and monitor your ML data pipeline end-to-end
author = WhyLabs.ai
author-email = support@whylabs.ai
license = apache-2.0
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/whylabs/whylogs-python/
project-urls =
    Documentation = https://whylogs.readthedocs.io/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apple Public Source License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    click>=7.1.2
    python-dateutil>=2.8.1
    protobuf>=3.15.5
    pyyaml>=5.3.1
    pandas>1.0
    marshmallow>=3.7.1
    numpy>=1.18
    whylabs-datasketches>=2.2.0b1
    boto3>=1.14.1
    botocore>=1.17.44
    smart-open>=4.1.2
# very important: s3fs pulls in aiobotocore, which locks boto3
    xlrd==2.0.1
    openpyxl==3.0.6
    scikit-learn==0.24.1
    puremagic == 1.10
    tqdm==4.54.0

setup_requires =
    pytest-runner
    setuptools


# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*!=3.9.*

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
all =
    %(viz)s
    %(mlflow)s
dev =
    %(testing)s
    %(viz)s
    %(mlflow)s
    pytest-cov  # For pycharm
    ipython
    argh>=0.26
    pytest-runner>=5.2
testing =
    pytest
    pytest-cov  # For pycharm
    argh>=0.26
    pytest-runner>=5.2
    ipykernel
    pyarrow
    pre-commit
    twine
    moto
    wheel
    setuptools_black
    coverage==5.3  # Required for pycharm to run tests with coverage
    sklearn
viz =
    matplotlib
mlflow =
    mlflow

[options.entry_points]
console_scripts =
    whylogs = whylogs.cli:main
    whylogs-demo = whylogs.cli:demo_main

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov='src/.' --cov-report term-missing --cov-report xml
    --verbose
relative_files = True
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel
test = pytest

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs
    src/whylogs/proto
    tests
max-line-length = 160
max-complexity = 20

[coverage:run]
branch = True
source = whylogs
relative_files = True
# omit = bad_file.py

[coverage:paths]
source =
    src/

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
fail_under = 70
