[tool.poetry]
name = "whylogs"
version = "1.0.5"
description = "Profile and monitor your ML data pipeline end-to-end"
authors = ["WhyLabs.ai <support@whylabs.ai>"]
license = "Apache-2.0"
homepage = "https://docs.whylabs.ai"
readme = "README.md"
include = ["whylogs/core/proto/v0/*.py*", "whylogs/core/proto/*.py*"]


[tool.poetry.dependencies]
# core dependencies. Be REALLY mindful when touching this list
python = ">=3.7.1, <3.10"
whylogs-sketching = ">=3.4.1.dev1"
protobuf = ">=3.15.5"
importlib-metadata = { version = ">=0.23", python = "<3.8" }
typing-extensions = ">=typing-extensions"

# viz module. Everything after this should be optional
pybars3 = { version = "^0.9", optional = true }
ipython = { version = "*", optional = true }
scipy = { version = ">=1.5, <1.8", optional = true }

# Doc dependencies
sphinx = { version = "*", optional = true }
sphinx-autoapi = { version = "*", optional = true }
sphinx-copybutton = { version = "^0.5.0", optional = true }
myst-parser = { extras = ["sphinx"], version = "^0.17.2", optional = true }
furo = { version = "^2022.3.4", optional = true }
sphinx-autobuild = { version = "^2021.3.14", optional = true }
sphinxext-opengraph = { version = "^0.6.3", optional = true }
sphinx-inline-tabs = { version = "*", optional = true }
flake8 = { version = "4.0.1", optional = true }
nbsphinx = { version = "^0.8.8", optional = true }

# Integrations dependencies
boto3 = {version = "^1.22.13", optional = true }
whylabs-client = {version = "^0.3.0", optional = true}
mlflow-skinny = {version = "^1.26.1", optional = true}


# Pyspark related dependencies
pyarrow = {version = "^8.0.0", optional = true}
pyspark = {version = "^3.0.0", optional = true}

[tool.poetry.dev-dependencies]
2to3 = "^1.0"
black = { version = "*", allow-prereleases = true }
flake8 = "*"
isort = "^5.6"
mypy = ">=0.942,<1"
pre-commit = "^2.8"
pytest = "^6.2"
pytest-cov = "^3"
pytest-mock = "^3.3"
nbconvert = "^6.0.7"
autoflake = "^1.4"
mypy-protobuf = ">=3.2.0"
types-protobuf = ">=0.1.14"
pandas = "*"
pandas-stubs = "*"
ipykernel = ">=6.11" # for developing in Jupyter notebook
types-python-dateutil = "^2.8.12"
moto = "^3.1.9"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-autoapi",
    "sphinx-autobuild",
    "furo",
    "sphinx-copybutton",
    "myst-parser",
    "nbsphinx",
    "sphinx-inline-tabs",
    "sphinxext-opengraph",
    "sphinx-autodoc",
    "sphinx-autodoc-typehints",
]
viz = [
    "ipython",
    "pybars3",
    "scipy",
]
spark = [
    "pyarrow",
    "pyspark",
]

s3 = [
  "boto3"
]
whylabs = [
  "whylabs-client"
]
mlflow = [
  "mlflow-skinny"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["whylogs", "tests"]
skip = ["whylogs/core/proto/", ".venv", "docs"]
multi_line_output = 3


[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["whylogs/**/*.py"]
namespace_packages = true
show_error_codes = true
plugins = [
    "numpy.typing.mypy_plugin"
]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tests
    | whylogs/core/proto
    | whylogs/viz/html
    | docs
    | *.pyi
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tests
    | whylogs/core/proto
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
