[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony@whylabs.ai>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pyspark = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
